// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="sc-AxjAm ddQVWI"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <button
    class="sc-AxjAm iueUfM"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <button
    class="sc-AxjAm cCtLft"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <button
    class="sc-AxjAm erfwnM"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render as outline 1`] = `
<div>
  <button
    class="sc-AxjAm fKQHdR"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render as plain 1`] = `
<div>
  <button
    class="sc-AxjAm ddJBbC"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render contrast text if not primary 1`] = `
<div>
  <button
    class="sc-AxjAm byfgCw"
    color="danger"
    type="button"
  />
</div>
`;

exports[`Button should render if disabled 1`] = `[Function]`;

exports[`Button should render white text if primary 1`] = `
<div>
  <button
    class="sc-AxjAm ddQVWI"
    color="primary"
    type="button"
  />
</div>
`;
